tests/fixtures/invalid/round_float_str.py
# Cannot call round() with Float, Str
x = round(1.0, "hello")
